# LDscript

./: .gitmodules  CMakeLists.txt  Info.md  LICENSE  README.md  generateLexerParser.bat
Compiler/: lexer.h  main.cpp  parser.h
Documentation/: BasicTypes.md
TestSrc/: example.lds  main.lds
lds/: exampleSimple.lds
src/: main.cpp
src/antlr/: LdScript.g4
src/lds/: Compiler.cpp  Compiler.h
